# Mitigating-Sycophancy

./: .gitignore  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  Research_Proposal.md  context.md  neurips-execution-plan.md  neurips-plan.md  paper.md  paper.tex  paper_todo.md  pyproject.toml  pytorch_check.py  references.bib  requirements.txt  research.md  sycophancy-mech-interp-research.md  sycophancy-mechinterp-research.md
data/: download_anthropic.py
docs/: ENGINEERING_NOTES.md  LITERATURE_REVIEW.md  RERUN_LOG.md  RESEARCH_BACKUP.md
notebooks/: 01_baseline_colab.ipynb
outputs/: mitigating-sycophancy-mech-interp-research.md  mitigating-sycophancy-mech-interp-review.md  paper-review.md  patching-ablation-dissociation-brief.md  patching-ablation-dissociation-brief.provenance.md  sycophancy-mech-interp-review.md  sycophancy-mechanistic-mitigation-research.md  sycophancy-mechanistic-mitigation-review.md  sycophancy-mechinterp-review.md  sycophancy-mitigation-methods-comparison.md
overleaf/: paper.tex  references.bib
results/: baseline_llama3_base_detailed.csv  baseline_llama3_base_summary.json  baseline_llama3_detailed.csv  baseline_llama3_summary.json  corrected_ablation_results.json  dpo_eval_results.json  dpo_gsm8k_full_results.json  dpo_training_metrics.json  full_rerun_manifest.json  head_ablation_results.json  head_importance.json  ood_opinion_eval_results.json  patching_heatmap.json  probe_control_balanced_results.json  probe_control_results.json  probe_results_llama3_base_neutral_transfer.json  probe_results_mixed_diagnostic.json  (+6 more)
(+404 files in other folders)
